@@ -14,6 +14,8 @@ Release @version@-@release@ Start 30/11/2023 End XX/XX/XXXX
 - 23/01/2024
 06. timeoutread.c, timeoutwrite.c: added version using poll() instead of
     select() - taken from Erwin Hofman's fehQlibs
+- 31/01/2024
+07. envdir.c: handle symbolic links to .evndir and .envfile correctly
 
 * Fri Sep 08 2023 12:40:38 +0530 Manvendra Bhangui <libqmail@indimail.org> 1.2-1.1%{?dist}
 Release 1.2-1.1 Start 24/04/2023 End 08/09/2023
